<resources>
    <string name="app_name">WUAD</string>
    <string name="wuad_app">Wuad APP</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="recuperar_usuario">Recuperar Usuario</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="facebook_app_id">743636622975811</string>
    <string name="fb_login_protocol_scheme">fb743636622975811</string>
    <string name="twitter_consumer_key">GPZmQfgDSXsCg6JqwlOSYwMJx</string>
    <string name="twitter_consumer_secret">FYYjHHgpeWMDGB0hRO7liExXoRuyeC1iq0gv14oraVVTlrRk9i</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>